library/fdk-aac-rs/fdk-aac-sys/src/bindings.rs

#[doc = "< No error happened. All fine."]
pub const AACENC_ERROR_AACENC_OK: AACENC_ERROR = 0;
pub const AACENC_ERROR_AACENC_INVALID_HANDLE: AACENC_ERROR = 32;
#[doc = "< Memory allocation failed."]
pub const AACENC_ERROR_AACENC_MEMORY_ERROR: AACENC_ERROR = 33;
#[doc = "< Parameter not available."]
pub const AACENC_ERROR_AACENC_UNSUPPORTED_PARAMETER: AACENC_ERROR = 34;
#[doc = "< Configuration not provided."]
pub const AACENC_ERROR_AACENC_INVALID_CONFIG: AACENC_ERROR = 35;
#[doc = "< General initialization error."]
pub const AACENC_ERROR_AACENC_INIT_ERROR: AACENC_ERROR = 64;
#[doc = "< AAC library initialization error."]
pub const AACENC_ERROR_AACENC_INIT_AAC_ERROR: AACENC_ERROR = 65;
#[doc = "< SBR library initialization error."]
pub const AACENC_ERROR_AACENC_INIT_SBR_ERROR: AACENC_ERROR = 66;
#[doc = "< Transport library initialization error."]
pub const AACENC_ERROR_AACENC_INIT_TP_ERROR: AACENC_ERROR = 67;
pub const AACENC_ERROR_AACENC_INIT_META_ERROR: AACENC_ERROR = 68;
#[doc = "< MPS library initialization error."]
pub const AACENC_ERROR_AACENC_INIT_MPS_ERROR: AACENC_ERROR = 69;
#[doc = "< The encoding process was interrupted by an"]
#[doc = "unexpected error."]
pub const AACENC_ERROR_AACENC_ENCODE_ERROR: AACENC_ERROR = 96;
#[doc = "< End of file reached."]
pub const AACENC_ERROR_AACENC_ENCODE_EOF: AACENC_ERROR = 128;
#[doc = "  AAC encoder error codes."]
pub type AACENC_ERROR = u32;
#[doc = "< Audio input buffer, interleaved INT_PCM samples."]
pub const AACENC_BufferIdentifier_IN_AUDIO_DATA: AACENC_BufferIdentifier = 0;
#[doc = "< Ancillary data to be embedded into bitstream."]
pub const AACENC_BufferIdentifier_IN_ANCILLRY_DATA: AACENC_BufferIdentifier = 1;
#[doc = "< Setup structure for embedding meta data."]
pub const AACENC_BufferIdentifier_IN_METADATA_SETUP: AACENC_BufferIdentifier = 2;
#[doc = "< Buffer holds bitstream output data."]
pub const AACENC_BufferIdentifier_OUT_BITSTREAM_DATA: AACENC_BufferIdentifier = 3;
pub const AACENC_BufferIdentifier_OUT_AU_SIZES: AACENC_BufferIdentifier = 4;
#[doc = "  AAC encoder buffer descriptors identifier."]
#[doc = "  This identifier are used within buffer descriptors"]
#[doc = " AACENC_BufDesc::bufferIdentifiers."]
pub type AACENC_BufferIdentifier = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AACENCODER {
    _unused: [u8; 0],
}
#[doc = "  AAC encoder handle."]
pub type HANDLE_AACENCODER = *mut AACENCODER;
#[doc = "  Provides some info about the encoder configuration."]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct AACENC_InfoStruct {
    #[doc = "< Maximum number of encoder bitstream bytes within one"]
    #[doc = "frame. Size depends on maximum number of supported"]
    #[doc = "channels in encoder instance. For superframing (as"]
    #[doc = "used for example in DAB+), size has to be a multiple"]
    #[doc = "accordingly."]
    pub maxOutBufBytes: UINT,
    #[doc = "< Maximum number of ancillary data bytes which can be"]
    #[doc = "inserted into bitstream within one frame."]
    pub maxAncBytes: UINT,
    #[doc = "< Internal input buffer fill level in samples per"]
    #[doc = "channel. This parameter will automatically be cleared"]
    #[doc = "if samplingrate or channel(Mode/Order) changes."]
    pub inBufFillLevel: UINT,
    #[doc = "< Number of input channels expected in encoding"]
    #[doc = "process."]
    pub inputChannels: UINT,
    #[doc = "< Amount of input audio samples consumed each frame per"]
    #[doc = "channel, depending on audio object type configuration."]
    pub frameLength: UINT,
    #[doc = "< Codec delay in PCM samples/channel. Depends on framelength"]
    #[doc = "and AOT. Does not include framing delay for filling up encoder"]
    #[doc = "PCM input buffer."]
    pub nDelay: UINT,
    #[doc = "< Codec delay in PCM samples/channel, w/o delay caused by"]
    #[doc = "the decoder SBR module. This delay is needed to correctly"]
    #[doc = "write edit lists for gapless playback. The decoder may not"]
    #[doc = "know how much delay is introdcued by SBR, since it may not"]
    #[doc = "know if SBR is active at all (implicit signaling),"]
    #[doc = "therefore the deocder must take into account any delay"]
    #[doc = "caused by the SBR module."]
    pub nDelayCore: UINT,
    #[doc = "< Configuration buffer in binary format as an"]
    #[doc = "AudioSpecificConfig or StreamMuxConfig according to the"]
    #[doc = "selected transport type."]
    pub confBuf: [UCHAR; 64usize],
    #[doc = "< Number of valid bytes in confBuf."]
    pub confSize: UINT,
}
#[test]
fn bindgen_test_layout_AACENC_InfoStruct() {
    assert_eq!(
        ::std::mem::size_of::<AACENC_InfoStruct>(),
        96usize,
        concat!("Size of: ", stringify!(AACENC_InfoStruct))
    );
    assert_eq!(
        ::std::mem::align_of::<AACENC_InfoStruct>(),
        4usize,
        concat!("Alignment of ", stringify!(AACENC_InfoStruct))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<AACENC_InfoStruct>())).maxOutBufBytes as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(AACENC_InfoStruct),
            "::",
            stringify!(maxOutBufBytes)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AACENC_InfoStruct>())).maxAncBytes as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(AACENC_InfoStruct),
            "::",
            stringify!(maxAncBytes)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<AACENC_InfoStruct>())).inBufFillLevel as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(AACENC_InfoStruct),
            "::",
            stringify!(inBufFillLevel)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AACENC_InfoStruct>())).inputChannels as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(AACENC_InfoStruct),
            "::",
            stringify!(inputChannels)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AACENC_InfoStruct>())).frameLength as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(AACENC_InfoStruct),
            "::",
            stringify!(frameLength)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AACENC_InfoStruct>())).nDelay as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(AACENC_InfoStruct),
            "::",
            stringify!(nDelay)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AACENC_InfoStruct>())).nDelayCore as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(AACENC_InfoStruct),
            "::",
            stringify!(nDelayCore)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AACENC_InfoStruct>())).confBuf as *const _ as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(AACENC_InfoStruct),
            "::",
            stringify!(confBuf)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AACENC_InfoStruct>())).confSize as *const _ as usize },
        92usize,
        concat!(
            "Offset of field: ",
            stringify!(AACENC_InfoStruct),
            "::",
            stringify!(confSize)
        )
    );
}
#[doc = "  Describes the input and output buffers for an aacEncEncode() call."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AACENC_BufDesc {
    #[doc = "< Number of buffers."]
    pub numBufs: INT,
    #[doc = "< Pointer to vector containing buffer addresses."]
    pub bufs: *mut *mut ::std::os::raw::c_void,
    #[doc = "< Identifier of each buffer element. See"]
    #[doc = "::AACENC_BufferIdentifier."]
    pub bufferIdentifiers: *mut INT,
    #[doc = "< Size of each buffer in 8-bit bytes."]
    pub bufSizes: *mut INT,
    #[doc = "< Size of each buffer element in bytes."]
    pub bufElSizes: *mut INT,
}
#[test]
fn bindgen_test_layout_AACENC_BufDesc() {
    assert_eq!(
        ::std::mem::size_of::<AACENC_BufDesc>(),
        40usize,
        concat!("Size of: ", stringify!(AACENC_BufDesc))
    );
    assert_eq!(
        ::std::mem::align_of::<AACENC_BufDesc>(),
        8usize,
        concat!("Alignment of ", stringify!(AACENC_BufDesc))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AACENC_BufDesc>())).numBufs as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(AACENC_BufDesc),
            "::",
            stringify!(numBufs)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AACENC_BufDesc>())).bufs as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(AACENC_BufDesc),
            "::",
            stringify!(bufs)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<AACENC_BufDesc>())).bufferIdentifiers as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(AACENC_BufDesc),
            "::",
            stringify!(bufferIdentifiers)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AACENC_BufDesc>())).bufSizes as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(AACENC_BufDesc),
            "::",
            stringify!(bufSizes)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AACENC_BufDesc>())).bufElSizes as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(AACENC_BufDesc),
            "::",
            stringify!(bufElSizes)
        )
    );
}
#[doc = "  Defines the input arguments for an aacEncEncode() call."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AACENC_InArgs {
    #[doc = "< Number of valid input audio samples (multiple of input"]
    #[doc = "channels)."]
    pub numInSamples: INT,
    #[doc = "< Number of ancillary data bytes to be encoded."]
    pub numAncBytes: INT,
}
#[test]
fn bindgen_test_layout_AACENC_InArgs() {
    assert_eq!(
        ::std::mem::size_of::<AACENC_InArgs>(),
        8usize,
        concat!("Size of: ", stringify!(AACENC_InArgs))
    );
    assert_eq!(
        ::std::mem::align_of::<AACENC_InArgs>(),
        4usize,
        concat!("Alignment of ", stringify!(AACENC_InArgs))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AACENC_InArgs>())).numInSamples as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(AACENC_InArgs),
            "::",
            stringify!(numInSamples)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<AACENC_InArgs>())).numAncBytes as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(AACENC_InArgs),
            "::",
            stringify!(numAncBytes)
        )
    );
}
#[doc = "  Defines the output arguments for an aacEncEncode() call."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AACENC_OutArgs {
    #[doc = "< Number of valid bitstream bytes generated during"]
    #[doc = "aacEncEncode()."]
    pub numOutBytes: INT,
    #[doc = "< Number of input audio samples consumed by the encoder."]
    pub numInSamples: INT,
    #[doc = "< Number of ancillary data bytes consumed by the encoder."]
    pub numAncBytes: INT,
    #[doc = "< State of the bit reservoir in bits."]
    pub bitResState: INT,
}
